test/scc/decl/semantic-errors/021.a
021.t:3:5: error: incomplete type is not allowed